--- a/packages/editor/index.html
+++ b/packages/editor/index.html
@@ -6,8 +6,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=3.0s"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Nestia Editor</title>
   </head>
   <body style="width: 100%; height: 100%; margin: 0px; overflow: hidden">
     <div id="root" style="width: 100%; height: 100%"></div>
