--- a/packages/editor/index.html
+++ b/packages/editor/index.html
@@ -1,14 +1,13 @@
-<!doctype html>
-<html lang="en" style="width: 100%; height: 100%">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta
       name="viewport"
-      content="width=device-width, initial-scale=1, minimum-scale=1.0, maximum-scale=3.0s"
+      content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1.0, maximum-scale=3.0s"
     />
     <title>Nestia Editor</title>
   </head>
-  <body style="width: 100%; height: 100%; margin: 0px; overflow: hidden">
+  <body style="width: 100%; height: 100%; margin: 0px; overflow: hidden;">
     <div id="root" style="width: 100%; height: 100%"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
