--- a/packages/editor/index.html
+++ b/packages/editor/index.html
@@ -9,6 +9,11 @@
   </head>
   <body style="width: 100%; height: 100%; margin: 0px; overflow: hidden;">
     <div id="root" style="width: 100%; height: 100%"></div>
+    <script>
+      window.package = "@ORGANIZATION/PROJECT";
+      window.simulate = false; 
+      window.e2e = false;
+    </script>
     <script type="module" src="src/main.tsx"></script>
   </body>
 </html>
