--- a/packages/chat/index.html
+++ b/packages/chat/index.html
@@ -11,4 +11,4 @@
     <div id="root" style="width: 100%; height: 100%"></div>
     <script type="module" src="src/main.tsx"></script>
   </body>
-</html>;
+</html>
