--- a/packages/chat/shopping.html
+++ b/packages/chat/shopping.html
@@ -9,6 +9,6 @@
   </head>
   <body style="width: 100%; height: 100%; margin: 0px; overflow: hidden;">
     <div id="root" style="width: 100%; height: 100%"></div>
-    <script type="module" src="src/test.tsx"></script>
+    <script type="module" src="src/shopping.tsx"></script>
   </body>
-</html>;
+</html>
