--- a/packages/chat/shopping/index.html
+++ b/packages/chat/shopping/index.html
@@ -5,10 +5,10 @@
       name="viewport"
       content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1.0, maximum-scale=3.0s"
     />
-    <title>Nestia A.I. Chatbot Uploader</title>
+    <title>Nestia A.I. Chatbot (Shopping Mall Demonstration)</title>
   </head>
   <body style="width: 100%; height: 100%; margin: 0px; overflow: hidden;">
     <div id="root" style="width: 100%; height: 100%"></div>
-    <script type="module" src="./src/main.tsx"></script>
+    <script type="module" src="../src/shopping.tsx"></script>
   </body>
-</html>;
+</html>;=
