--- a/packages/chat/shopping/index.html
+++ b/packages/chat/shopping/index.html
@@ -11,4 +11,4 @@
     <div id="root" style="width: 100%; height: 100%"></div>
     <script type="module" src="../src/shopping.tsx"></script>
   </body>
-</html>;=
+</html>
