Add clarity and block uploader export in `@nestia/chat`.

--- a/packages/chat/index.html
+++ b/packages/chat/index.html
@@ -5,6 +5,13 @@
       name="viewport"
       content="width=device-width, height=device-height, initial-scale=1, minimum-scale=1.0, maximum-scale=3.0s"
     />
+    <script type="text/javascript">
+      (function(c,l,a,r,i,t,y){
+          c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+          t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+          y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+      })(window, document, "clarity", "script", "gu5qz1srj3");
+    </script>
     <title>Nestia A.I. Chatbot Uploader</title>
   </head>
   <body style="width: 100%; height: 100%; margin: 0px; overflow: hidden;">
