--- a/packages/chat/index.html
+++ b/packages/chat/index.html
@@ -16,6 +16,6 @@
   </head>
   <body style="width: 100%; height: 100%; margin: 0px; overflow: hidden;">
     <div id="root" style="width: 100%; height: 100%"></div>
-    <script type="module" src="./src/main.tsx"></script>
+    <script type="module" src="./src/html/uploader.tsx"></script>
   </body>
 </html>
