--- a/packages/chat/playground/index.html
+++ b/packages/chat/playground/index.html
@@ -12,10 +12,10 @@
           y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
       })(window, document, "clarity", "script", "gu5qz1srj3");
     </script>
-    <title>Nestia A.I. Chatbot Examples</title>
+    <title>Nestia A.I. Chatbot Playground</title>
   </head>
-  <body>
+  <body style="width: 100%; height: 100%; margin: 0px; overflow: hidden;">
     <div id="root" style="width: 100%; height: 100%"></div>
-    <script type="module" src="./src/examples/index.tsx"></script>
+    <script type="module" src="../src/examples/playground/index.tsx"></script>
   </body>
 </html>
