--- a/packages/chat/shopping/index.html
+++ b/packages/chat/shopping/index.html
@@ -16,6 +16,6 @@
   </head>
   <body style="width: 100%; height: 100%; margin: 0px; overflow: hidden;">
     <div id="root" style="width: 100%; height: 100%"></div>
-    <script type="module" src="../src/html/shopping.tsx"></script>
+    <script type="module" src="../src/examples/shopping/index.tsx"></script>
   </body>
 </html>
